Prevent drag to scroll on mobile to prevent cache loss in app

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,7 +26,7 @@ $theme: mat-dark-theme(
 body {
     font-family: 'Roboto', sans-serif;
     color: rgb(191, 191, 191);
-
+    overscroll-behavior-y: contain;
 }
 
 $icon-large-container-size: 4em;
